--- a/WebSite/Web.config
+++ b/WebSite/Web.config
@@ -10,6 +10,7 @@
   </configSections>
   <connectionStrings>
     <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\v11.0;Initial Catalog=aspnet-WebSite-20140514094433;Integrated Security=SSPI;AttachDBFilename=|DataDirectory|\aspnet-WebSite-20140514094433.mdf" providerName="System.Data.SqlClient" />
+    <add name="NwdMusikEntities" connectionString="metadata=res://*/Model.NwdMusik.csdl|res://*/Model.NwdMusik.ssdl|res://*/Model.NwdMusik.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(localdb)\v11.0;initial catalog=NwdMusik;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="2.0.0.0" />
